[package]
name = "riistudio_rs"
version = "0.1.0"
edition = "2018"

[lib]
crate-type=["staticlib"]

[dependencies]
zip-extract = { git = "https://github.com/riidefi/zip-extract" }
log = "0.4.7"
simple_logger = "4.0.0"
discord-rich-presence = "0.2.3"
clap = "4.1.8"
clap_derive = "4.1.8"
curl = "0.4.44"

[build-dependencies]
cxx-build = "1.0.90"
