[package]
name = "riistudio_rs"
version = "0.1.13"
edition = "2021"

[lib]
crate-type=["cdylib", "staticlib"]

[dependencies]
zip-extract = { git = "https://github.com/riidefi/zip-extract", branch = "v2" }
log = "0.4.7"
simple_logger = "4.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
