[package]
name = "rust_bundle"
version = "0.1.0"
edition = "2021"
description = "TODO"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[package.metadata.bundle]
name = "RiiStudio"
identifier = "com.riidefi.riistudio"
icon = ["../frontend/rc/icon.png"]
version = "Alpha 5.10.9"
resources = ["fonts", "lang"]
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""
deb_depends = ["libgl1-mesa-glx", "libsdl2-2.0-0 (>= 2.0.5)"]
osx_frameworks = ["CoreFoundation"]
osx_url_schemes = ["com.doe.exampleapplication"]