[package]
name = "szs"
license = "MIT"
version = "0.3.1"
edition = "2021"
description = "Lightweight crate for SZS (\"Yaz0\") compression/decompression used in the Nintendo GameCube/Wii games. The library provides C, C++ and C# bindings. YAY0 (\"SZP\") is supported, too."
homepage = "https://github.com/riidefi/RiiStudio/tree/master/source/szs"
repository = "https://github.com/riidefi/RiiStudio"
keywords = ["wii", "gamecube", "yaz0", "szs", "yay0"]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["cdylib", "lib", "staticlib"]

[build-dependencies]
bindgen = "0.57"
cc = { version = "1.0", features = ["parallel"] }
