[package]
name = "riistudio_rs"
version = "0.1.15"
edition = "2021"

[lib]
crate-type=["staticlib", "cdylib"]

[dependencies]
zip-extract = { git = "https://github.com/riidefi/zip-extract", branch = "v2", features = ["deflate"] }
log = "0.4.7"
simple_logger = "4.0.0"
reqwest = { version = "0.11", features = ["blocking"] }
